--- a/gradle.properties
+++ b/gradle.properties
@@ -9,8 +9,8 @@ org.gradle.jvmargs=-Xmx1G
 
 # Mod Properties
 	mod_version = 1.0.0
-	maven_group = com.example
-	archives_base_name = fabric-example-mod
+	maven_group = com.github.startsmercury
+	archives_base_name = brightness-auto-tune
 
 # Dependencies
 	fabric_version=0.46.2+1.18
