--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,15 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+# Gradle Virtual Machine Arguments
+	org.gradle.jvmargs = -Xmx1G
 
-# Fabric Properties
-	# check these on https://fabricmc.net/develop
-	minecraft_version=1.18.1
-	yarn_mappings=1.18.1+build.22
-	loader_version=0.12.12
+# Fabric Properties (https://fabricmc.net/develop)
+	loader_version = 0.12.12
+	minecraft_version = 1.18.1
+	yarn_mappings = 1.18.1+build.22
 
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = com.github.startsmercury
 	archives_base_name = brightness-auto-tune
+	maven_group = com.github.startsmercury
+	mod_version = 1.0.0
 
 # Dependencies
 	fabric_version=0.46.2+1.18
