Direct Gradle Properties
Moved 3 properties from build.gradle to gradle.proeprties

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,9 +6,9 @@
 	minecraft_version = 1.18.1
 
 # Mod Properties
-	archives_base_name = brightness-auto-tune
-	maven_group = com.github.startsmercury
-	mod_version = 1.0.0
+	group = com.github.startsmercury
+	archivesBaseName = brightness-auto-tune
+	version = 1.0.0
 
 # Dependencies
 	fabric_version = 0.46.2+1.18
