Add Missing Maven Repository
 - for data breaker

--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,9 @@ plugins {
 sourceCompatibility = VERSION_17
 targetCompatibility = VERSION_17
 
-repositories {}
+repositories {
+	maven { url 'https://maven.gegy.dev/' }
+}
 
 dependencies {
 	/*
