--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,17 @@ repositories {
 	maven { url 'https://cursemaven.com'; content { includeGroup 'curse.maven' } }
 	maven { url 'https://jitpack.io' }
 	maven { url 'https://maven.gegy.dev/' }
+	maven { url 'https://maven.shedaniel.me/' }
+	maven { url 'https://maven.terraformersmc.com/' }
 }
 
 // Standard Dependencies
 dependencies {
+	// Cloth Config
+	modImplementation "me.shedaniel.cloth:cloth-config-fabric:${cloth_config_version}", {
+		exclude group: 'net.fabricmc.fabric-api'
+	}
+
 	/*
 	 * Fabric API.
 	 *
@@ -32,6 +39,9 @@ dependencies {
 
 	// Minecraft
 	minecraft "com.mojang:minecraft:${minecraft_version}"
+
+	// Mod Menu
+	modImplementation "com.terraformersmc:modmenu:${modmenu_version}"
 }
 
 // Performant Dependencies
@@ -46,17 +56,21 @@ dependencies {
 
 	// FerriteCore
 	modRuntimeOnly 'curse.maven:ferritecore-459857:3550048'
-
-	// Lazy DFU
-	modRuntimeOnly 'com.github.astei:lazydfu:0.1.2', {
-		exclude module: 'fabric-loader'
-	}
+	
+	// JOML
+	runtimeOnly 'org.joml:joml:1.10.2'
 
 	// Lithium
-	modRuntimeOnly 'curse.maven:lithium-360438:3590908'
+//	modRuntimeOnly 'curse.maven:lithium-360438:3659182'
+
+	// Ksyxis
+	modRuntimeOnly 'maven.modrinth:ksyxis:1.1'
 
 	// Smooth Boot
 	modRuntimeOnly 'curse.maven:smoothboot-415758:3549723'
+	
+	// Sodium
+	modRuntimeOnly 'maven.modrinth:sodium:mc1.18.1-0.4.0-alpha6'
 
 	// Starlight
 	modRuntimeOnly 'curse.maven:starlight-521783:3554912'
@@ -69,8 +83,10 @@ processResources {
 	inputs.property 'version', version
 
 	filesMatching 'fabric.mod.json', {
-		expand 'loader_version': loader_version,
+		expand 'cloth_config_version': cloth_config_version,
+		       'loader_version': loader_version,
 		       'minecraft_version': minecraft_version,
+		       'modmenu_version': modmenu_version,
 		       'version': version
 	}
 }
