--- a/gradle.properties
+++ b/gradle.properties
@@ -11,4 +11,6 @@
 	version = 1.0.0
 
 # Dependencies
-	fabric_version = 0.46.2+1.18
+	cloth_config_version = 6.2.57
+	fabric_version = 0.46.4+1.18
+	modmenu_version = 3.0.1
