--- a/gradle.properties
+++ b/gradle.properties
@@ -6,9 +6,9 @@
 	minecraft_version = 1.18.1
 
 # Mod Properties
-	group = com.github.startsmercury
-	archivesBaseName = brightness-auto-tune
-	version = 1.0.0
+	mod_group = com.github.startsmercury
+	mod_name = brightness-auto-tune
+	mod_version = 0.0.1
 
 # Dependencies
 	cloth_config_version = 6.2.57
